--- a/templates/timecapsule/mtgp.html
+++ b/templates/timecapsule/mtgp.html
@@ -7,7 +7,7 @@
 <META NAME="Description" CONTENT="Landstown High School, Virginia Beach, VA, USA.">
 {% endblock %}
 {% block java %}
-<script type="text/javascript" src="http://clustrmaps.com/admin/3d/js/clustrmaps.js"></script>
+<script type="text/javascript" src="https://clustrmaps.com/admin/3d/js/clustrmaps.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -19,7 +19,7 @@
 </p>
 
 <p>
-	<span style="font-size: 7;"><a href="http://www.vbschools.com/classof2010/index.asp">CLICK HERE TO GO TO THE
+	<span style="font-size: 7;"><a href="https://www.vbschools.com/classof2010/index.asp">CLICK HERE TO GO TO THE
 			GRADUATION PAGE.</a></span>
 </p>
 
