--- a/templates/timecapsuledeep/insanity.html
+++ b/templates/timecapsuledeep/insanity.html
@@ -26,7 +26,7 @@
 
         //Trembling message script- ' Dynamic Drive (www.dynamicdrive.com)
         //For full source code, 100's more DHTML scripts, and TOS,
-        //visit http://www.dynamicdrive.com
+        //visit https://www.dynamicdrive.com
 
         var ns6 = document.getElementById && !document.all
         var ie = document.all
@@ -95,9 +95,9 @@
     <script LANGUAGE="JavaScript">
 
         /*
-        Elastic Trail script (By Philip Winston @ pwinston@yahoo.com, URL: http://www.geocities.com/pwinston/)
+        Elastic Trail script (By Philip Winston @ pwinston@yahoo.com, URL: https://www.geocities.com/pwinston/)
         Script featured on Dynamicdrive.com
-        For this and 100's more DHTML scripts, visit http://dynamicdrive.com
+        For this and 100's more DHTML scripts, visit https://dynamicdrive.com
         */
 
         var nDots = 7;
@@ -127,7 +127,7 @@
         var STOPVEL = 0.1;
         var STOPACC = 0.1;
         var DOTSIZE = 11;
-        // BOUNCE is percent of velocity retained when 
+        // BOUNCE is percent of velocity retained when
         // bouncing off a wall
         var BOUNCE = 0.75;
 
@@ -147,7 +147,7 @@
             }
 
             if (!isNetscape) {
-                // I only know how to read the locations of the 
+                // I only know how to read the locations of the
                 // <LI> items in IE
                 //skip this for now
                 // setInitPositions(dots)
@@ -195,7 +195,7 @@
         // Had to add -DOTSIZE to X and 2*DOTSIZE to Y for IE 5, not sure why
         // Still doesn't work great
         function setInitPositions(dots) {
-            // initialize dot positions to be on top 
+            // initialize dot positions to be on top
             // of the bullets in the <ul>
             var startloc = document.all.tags("LI");
             var i = 0;
@@ -354,12 +354,12 @@
     </font>
     <font face="verdana" size=1>
 
-        <p>Credit to <a href="http://www.dynamicdrive.com">Dynamic Drive</a>
+        <p>Credit to <a href="https://www.dynamicdrive.com">Dynamic Drive</a>
             for the cool mouse ball chain on The Page of Insanity. Thanks a lot, DD!
         </p>
 
         <p>
-            Also, thanks to <a href="http://www.astronomy.swin.edu.au/~pbourke/fractals/">
+            Also, thanks to <a href="https://www.astronomy.swin.edu.au/~pbourke/fractals/">
                 Fractals, Chaos</a> for the background of The Page of Insanity.
         </p>
 
